[fix]  메뉴 등록 시 대표메뉴 추가, 고객 선호 키워드 Json 형식으로 수정
